--- a/.github/config.yml
+++ b/.github/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Issues found with our documentation?
-    url: https://github.com/Rich-In-SQL/Sequel-Formula/issues/new
-    about: Open an issue
+  - name: GitHub Community Support
+    url: https://github.com/orgs/community/discussions
+    about: Please ask and answer questions here.
+  - name: GitHub Security Bug Bounty
+    url: https://bounty.github.com/
+    about: Please report security vulnerabilities here.
